<?xml version="1.0"?>
<package format="2">
  <name>d4zbot_simulator</name>
  <version>0.0.0</version>
  <description>The d4zbot_simulator package</description>

  <maintainer email="d4z@todo.todo">d4z</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>d4zbot_gazebo</exec_depend>

  <export>
  </export>
</package>
